--- a/config.json
+++ b/config.json
@@ -16,10 +16,10 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
+    "BOTNAME": "S3X পিচ্চি ☢️_𖣘 -SHANTO ⚠️",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100000478146113",
+        "61578764098437",
         "61576520552554",
         "61550035211214"
     ],
